adding LMV nav test section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
                 <section>
                     <a href="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/racecar/Design.svf">demo</a>
                 </section>
-                
+                <section>
+                    <h3>Let's see something that makes more sense for the AEC industry</h3>
+                    <a href="http://calm-inlet-4387.herokuapp.com/?_sm_au_=iVVp43FjZ50pfTqM">LMV Nav demo</a>
+                </section>
 
                 <section>
                     <h2 class="fragment">Yes I'm sold, How do I get Started???</h2>
