--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                             <li>sample apps</li>
                             <li>libraries</li>
                         </ul>
-                        <li class="fragment">These slides are on <br><a href="http://jaimerosales.github.io/NYC-Meetup">http://jaimerosales.github.io/NYC-Meetup</a></li>
-                        <li class="fragment">Ask, Don't be shy</li>
+                        <li class="fragment">These slides are on <br><a href="http://jaimerosales.github.io/london-prehack">http://jaimerosales.github.io/london-prehack</a></li>
+                        <li class="fragment">Ask, Don't be shy mate</li>
                     </ul>
                 </section>
                 
