added webgl samples

--- a/index.html
+++ b/index.html
@@ -94,11 +94,32 @@
           <p>but every browser supports it</p>
           <img src="img/supported-browsers.png">
           </div>
+					<p>
+						<a href="http://madebyevan.com/webgl-water">Water simulation</a> &ndash;
+						<a href="http://labs.gooengine.com/pearl-boy/index.html">Pearl boy rows and dives</a>
+					</p>
           <p class="fragment">It's a difficult technology to master</p>
         </section>
 
+
+				<!--
         <section>
-          <h2>Autodesk came out with a 3D/2D viewer...</h2>
+          <a href="http://www.hermanmiller.com/products/seating/performance-work-chairs/aeron-chairs.html"><p>Buying an Aeron chair...</p></a>
+        </section>
+        -->
+
+        <section>
+          <p>Would you rather see this on your e-commerce website..</p>
+          <img src="img/ecommerce.png">
+        </section>
+
+        <section>
+          <p>or this?</p>
+          <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/bike/0.svf" height="500px" width="80%"></iframe>
+        </section>
+
+        <section>
+          <h2>Autodesk provides a 3D/2D viewer...</h2>
           <div class="row">
           <div class="col-xs-6 fragment">
           <h1><i class="fa fa-cloud-upload"></i></h1>
@@ -115,21 +136,7 @@
         </section>
 
         <section>
-          <a href="http://www.hermanmiller.com/products/seating/performance-work-chairs/aeron-chairs.html"><p>Buying an Aeron chair...</p></a>
-        </section>
-
-        <section>
           <a href="https://360.autodesk.com/viewer">https://360.autodesk.com/viewer</a>
-        </section>
-
-        <section>
-          <p>Would you rather see this on your e-commerce website..</p>
-          <img src="img/ecommerce.png">
-        </section>
-
-        <section>
-          <p>or this?</p>
-          <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/bike/0.svf" height="500px" width="80%"></iframe>
         </section>
 
         <section>
