--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         <section>
           <h2>Yes I'm sold, How do I get Started???</h2>
           <p>go to <a href="https://developer.autodesk.com">developer.autodesk.com</a></p>
-					<p>try it out live at <a href="https://developer.autodesk.com/api/view-and-data-api/interactive">developer.autodesk.comapi/view-and-data-api/interactive</a></p>
+					<p>try it out live at <br/>
+					<a href="https://developer.autodesk.com/api/view-and-data-api/interactive">developer.autodesk.comapi/view-and-data-api/interactive</a></p>
           <p class="fragment">tweet me @jeremytammik</p>
         </section>
 
