--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </section>
 
         <section>
-          <h3>Let's see something that makes more sense for the AEC industry</h3>
+          <h3>Synchronised 2D/3D can make sense for the AEC industry</h3>
           <a href="http://calm-inlet-4387.herokuapp.com/?_sm_au_=iVVp43FjZ50pfTqM">LMV Nav demo</a>
         </section>
 
