--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </section>
 
         <section>
-          <h2>Yes I'm sold, How do I get Started???</h2>
+          <h2>Yes, I'm sold;<br/>How do I get Started?</h2>
           <p>go to <a href="https://developer.autodesk.com">developer.autodesk.com</a></p>
 					<p>try it out live at</p>
 					<p><a href="https://developer.autodesk.com/api/view-and-data-api/interactive">developer.autodesk.com/api/view-and-data-api/interactive</a></p>
