replace viewer by forge

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
           <div class="row">
           <div class="col-xs-6 fragment">
           <h1><i class="fa fa-cloud-upload"></i></h1>
-          <p>Upload your CAD file</p>
+          <p>Upload, translate and query CAD model</p>
           <p>REST API</p>
           </div>
           <div class="col-xs-6 fragment">
           <h1><i class="fa fa-desktop"></i></h1>
-          <p>View on a browser</p>
+          <p>View in any browser</p>
           <p>JavaScript API</p>
           </div>
           </div>
