--- a/index.html
+++ b/index.html
@@ -305,14 +305,19 @@
         <section>
           <h1>Resources</h1>
           <ul class="fragment">
-          <li class="fragment"><a href="https://developer.autodesk.com/">Developer Portal</a></li>
+          <li class="fragment"><a href="https://developer.autodesk.com">Developer Portal</a></li>
           <li class="fragment"><a href="http://developer-autodesk.github.io/">Samples page on GitHub</a></li>
           <ul class="fragment">
           <li>quick start guides</li>
           <li>sample apps</li>
           <li>libraries</li>
+					<ul>
+          <li><a href="https://github.com/Developer-Autodesk">Developer-Autodesk</a></li>
+          <li><a href="https://github.com/Autodesk-Forge">Autodesk-Forge</a></li>
+					</ul>
           </ul>
-          <li class="fragment">These slides are on <br><a href="http://jeremytammik.github.io/bim_programming_madrid">jeremytammik.github.io/bim_programming_madrid</a></li>
+          <li class="fragment">View these slides at <br><a href="http://jeremytammik.github.io/bim_programming">jeremytammik.github.io/bim_programming</a></li>
+          <li class="fragment">Slide source is at <br><a href="https://github.com/jeremytammik/bim_programming">github.com/jeremytammik/bim_programming</a></li>
           <li class="fragment">Ask. Por favor!</li>
           </ul>
         </section>
