--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>3D Content on Web</title>
 
-    <meta name="description" content="WebGL and View and Data API presentation for the BIM Programming Conference and Workshops in Madrid">
+    <meta name="description" content="WebGL and Forge presentation for BIM Programming">
     <meta name="author" content="Jeremy Tammik">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -46,7 +46,7 @@
       <div class="slides">
         <section>
           <img src="img/Autodesk-logo.png" width="50%">
-          <h2>3D Content on the Web</h2>
+          <h2>Forge and CAD Models on the Web</h2>
         </section>
 
         <section>
@@ -235,7 +235,7 @@
           <h2>JavaScript API</h2>
         </section>
 
-          <section class="fragment">
+        <section class="fragment">
           <h2>On your page</h2>
           <div class="fragment">
           <p>Reference the following JavaScript Libraries:</p>
@@ -270,14 +270,13 @@
           }</code></pre>
         </section>
 
-          <section class="fragment">
+        <section class="fragment">
           <h3>token</h3>
           <pre><code data-trim class="javascript">function getToken() {
           return "GX6OONHlQ9qoVaCSmBqJvqPFUT5i";
           }</code></pre>
           <p class="fragment">You should write your own token service.</p>
         </section>
-
 
         <section>
           <h3>loadDocument</h3>
@@ -302,6 +301,7 @@
           });
           }</code></pre>
         </section>
+				
         <section>
           <h1>Resources</h1>
           <ul class="fragment">
