--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <section>
           <h2>Autodesk provides...</h2>
-					<p>web services and viewer for CAD models</p>
+					<p>Forge web services and viewer for CAD models</p>
           <div class="row">
           <div class="col-xs-6 fragment">
           <h1><i class="fa fa-cloud-upload"></i></h1>
