--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="slides">
         <section>
           <img src="img/Autodesk-logo.png" width="50%">
-          <h2>Forge and CAD Models on the Web</h2>
+          <h2>Forge &ndash; CAD Models on the Web</h2>
         </section>
 
         <section>
