--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <section>
           <img src="img/Autodesk-logo.png" width="50%">
           <h2>Forge &ndash; CAD Models on the Web</h2>
+					<p><a href="https://github.com/jeremytammik/forge_bim_programming">source on GitHub</a></p>
         </section>
 
         <section>
