--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
         </section>
 
         <section>
+          <h2>More seriously...</h2>
+          <img src="img/bim_collaboration_roles.png">
+        </section>
+
+        <section>
           <h2>WebGL</h2>
           <p class="fragment">JavaScript API that lets browsers render 3D</p>
           <p class="fragment">It's not a W3C standard...</p>
@@ -138,6 +143,11 @@
         </section>
 
         <section>
+          <h2>Forge platform</h2>
+          <img src="img/forge_platform_diagram.png">
+        </section>
+
+        <section>
           <a href="https://360.autodesk.com/viewer">https://360.autodesk.com/viewer</a>
         </section>
 
@@ -175,6 +185,11 @@
         <section>
           <h3>Synchronised 2D/3D can make sense for the AEC industry</h3>
           <a href="http://calm-inlet-4387.herokuapp.com/?_sm_au_=iVVp43FjZ50pfTqM">LMV Nav demo</a>
+        </section>
+
+        <section>
+          <h2>Forge components</h2>
+          <img src="img/forge_apis.png">
         </section>
 
         <section>
